plugins {
    id 'application'
    id 'jacoco'
    id 'java'
}

version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    testImplementation 'org.testng:testng:7.10.2'
    testImplementation 'org.mockito:mockito-core:5.16.1'
    testRuntimeOnly 'net.bytebuddy:byte-buddy-agent:1.15.11'

    testImplementation 'org.slf4j:slf4j-simple:2.0.13'
}

tasks.named('test') {
    useTestNG {
        includeGroups 'student', 'demo', 'all'
        useDefaultListeners = true
        outputDirectory = file("$projectDir/TestNG_Reports")
    }

    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
    jvmArgs += ['-Xshare:off']

    testLogging {
        events "SKIPPED", "FAILED"
        exceptionFormat = "full"
    }

    maxHeapSize = '1G'

    afterSuite { desc, result ->
        if (!desc.parent && result.testCount == 0) {
            throw new IllegalStateException("No tests were found. Failing the build")
        }
    }

    afterSuite { desc, result ->
        if (!desc.parent) {
            def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
            def startItem = '|  ', endItem = '  |'
            def repeatLength = startItem.length() + output.length() + endItem.length()
            println('\n' + ('-' * repeatLength))
            println(startItem + output + endItem)
            println('-' * repeatLength)
        }
    }

    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.12"
    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

check.dependsOn jacocoTestCoverageVerification

jacocoTestCoverageVerification {
    violationRules {
        rule {
            enabled = true
            includes = ['edu.msoe.swe2721.lab11.StockQuoteAnalyzer']
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.95
            }
        }
        rule {
            enabled = true
            includes = ['edu.msoe.swe2721.lab11.StockQuoteAnalyzer']
            limit {
                counter = 'METHOD'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
        }
    }
}

application {
    mainClass = 'edu.msoe.swe2721.lab11.Main'
}

run {
    args = ["feHfZJM6Bfu1risANgJFe5cF", "15", "5", "F", "DIS"]
}

allprojects {
    tasks.withType(Test).configureEach {
        testLogging {
            exceptionFormat = "full"
            showCauses = true
            showExceptions = true
            showStackTraces = true
            showStandardStreams = true
            events = ["skipped", "failed", "standardOut", "standardError"]
        }
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'edu.msoe.swe2721.lab11.MarketAnalyzer'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
